# bridge-server

./: .env.example  .gitignore  CHANGELOG-v2.1.0-SIMPLE.md  CHANGELOG-v2.1.0.md  CHANGELOG.md  DOCKER-QUICKSTART.md  INSTALL-INSTRUCTIONS.md  INSTALL-WINDOWS.md  INSTALL.md  LICENSE  README.md  TODO.md  USAGE-GUIDE-v2.1-SIMPLE.md  USAGE-GUIDE-v2.1.md  USAGE.md  architecture-refactor-plan.md  check-dependencies.sh  check_project_progress.py  complete-optimization-plan.md  config.yaml.example  config.yaml.secure-example  current-architecture-analysis.html  deploy.sh  docker-compose.lb.yml  docker-compose.yml  final_stage2_summary.md  install.ps1  install.sh  launch_stage2.py  main_v2.py  main_v2_async.py  project_progress.json  pyproject.toml  quick_start_v2.py  requirements-v2.txt  requirements.txt  setup-wizard.py  stage1_verification.py  stage2_implementation_report.md  stage2_performance_test.py  (+6 more)
app/: auth.py  main.py  reloader.py  router.py  ssl_manager.py  usage_async.py
cli/: bridge-server.py  config.py  install-cli-standalone.sh  model-benchmark.py  requirements.txt  setup-wizard.py
docker/: .dockerignore  Dockerfile  README.md  deploy.sh  docker-compose.yml
docs/: PORT-CONFIG.md  QUICKSTART.md  index.html
providers/: TAVILY-VERIFICATION-REPORT.json  loader.py
reports/: bandit-report-current.json  bandit-report.json  pip-audit-report.json  safety-report.json  secrets-report.json
scripts/: migrate_database.py  quick-verify.py  run-all-tests.sh  run-brave-verify.sh  run-quick-verify.sh  run-tavily-verify.sh  scale.sh  verify-providers.py  (+2 more)
web/: index.html
(+107 files in other folders)
