[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[project]
name = "bridge-server"
version = "1.0.0"
license = { text = "AGPL-3.0" }

[tool.coverage.run]
source = ["app", "services"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/cli/*",
    "*/setup-wizard.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]
